[package]
name = "book_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.75"
axum = { version="0.7.5", features = ["macros"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rstest = "0.26.1"
